--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -44,7 +44,7 @@
     <ion-grid>
       <ion-row>
         <ion-col size="6">
-          <ion-button routerLink="/login" style="text-transform: none;" expand="full">Iniciar Sesión
+          <ion-button routerLink="/login" style="text-transform: none;" expand="full" color="light">Iniciar Sesión
           </ion-button>
         </ion-col>
         <ion-col size="6">
