--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,11 +1,21 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab Three
+        {{ user.email }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+<ion-grid>
+  <ion-row>
+    <ion-col size="8">
+      <img src="{{ user.photoURL }}" (click)="showPhoto()">
+    </ion-col>
+    <ion-col size="4">
+        {{ user.username }}
+      </ion-col>
+  </ion-row>
+</ion-grid>
 <ion-button (click)='logOut()'>Salir</ion-button>
 </ion-content>
